lib/src/system_informer/generated_bindings.dart


enum PH_MAINWINDOW_CALLBACK_TYPE {
  PH_MAINWINDOW_CALLBACK_TYPE_DESTROY(0),
  PH_MAINWINDOW_CALLBACK_TYPE_SHOW_PROPERTIES(1),
  PH_MAINWINDOW_CALLBACK_TYPE_SAVE_ALL_SETTINGS(2),
  PH_MAINWINDOW_CALLBACK_TYPE_PREPARE_FOR_EARLY_SHUTDOWN(3),
  PH_MAINWINDOW_CALLBACK_TYPE_CANCEL_EARLY_SHUTDOWN(4),
  PH_MAINWINDOW_CALLBACK_TYPE_TOGGLE_VISIBLE(5),
  PH_MAINWINDOW_CALLBACK_TYPE_SHOW_MEMORY_EDITOR(6),
  PH_MAINWINDOW_CALLBACK_TYPE_SHOW_MEMORY_RESULTS(7),
  PH_MAINWINDOW_CALLBACK_TYPE_SELECT_TAB_PAGE(8),
  PH_MAINWINDOW_CALLBACK_TYPE_GET_CALLBACK_LAYOUT_PADDING(9),
  PH_MAINWINDOW_CALLBACK_TYPE_INVALIDATE_LAYOUT_PADDING(10),
  PH_MAINWINDOW_CALLBACK_TYPE_SELECT_PROCESS_NODE(11),
  PH_MAINWINDOW_CALLBACK_TYPE_SELECT_SERVICE_ITEM(12),
  PH_MAINWINDOW_CALLBACK_TYPE_SELECT_NETWORK_ITEM(13),
  PH_MAINWINDOW_CALLBACK_TYPE_UPDATE_FONT(14),
  PH_MAINWINDOW_CALLBACK_TYPE_GET_FONT(15),
  PH_MAINWINDOW_CALLBACK_TYPE_INVOKE(16),
  PH_MAINWINDOW_CALLBACK_TYPE_POST(17),
  PH_MAINWINDOW_CALLBACK_TYPE_REFRESH(18),
  PH_MAINWINDOW_CALLBACK_TYPE_CREATE_TAB_PAGE(19),
  PH_MAINWINDOW_CALLBACK_TYPE_GET_UPDATE_AUTOMATICALLY(20),
  PH_MAINWINDOW_CALLBACK_TYPE_SET_UPDATE_AUTOMATICALLY(21),
  PH_MAINWINDOW_CALLBACK_TYPE_ICON_CLICK(22),
  PH_MAINWINDOW_CALLBACK_TYPE_WINDOW_BASE(23),
  PH_MAINWINDOW_CALLBACK_TYPE_GETWINDOW_PROCEDURE(24),
  PH_MAINWINDOW_CALLBACK_TYPE_SETWINDOW_PROCEDURE(25),
  PH_MAINWINDOW_CALLBACK_TYPE_WINDOW_HANDLE(26),
  PH_MAINWINDOW_CALLBACK_TYPE_VERSION(27),
  PH_MAINWINDOW_CALLBACK_TYPE_PORTABLE(28),
  PH_MAINWINDOW_CALLBACK_TYPE_PAGEINDEX(29),
  PH_MAINWINDOW_CALLBACK_TYPE_WINDOWDPI(30),
  PH_MAINWINDOW_CALLBACK_TYPE_WINDOWNAME(31),
  PH_MAINWINDOW_CALLBACK_TYPE_MAXIMUM(32);

  final int value;
  const PH_MAINWINDOW_CALLBACK_TYPE(this.value);

  static PH_MAINWINDOW_CALLBACK_TYPE fromValue(int value) => switch (value) {
        0 => PH_MAINWINDOW_CALLBACK_TYPE_DESTROY,
        1 => PH_MAINWINDOW_CALLBACK_TYPE_SHOW_PROPERTIES,
        2 => PH_MAINWINDOW_CALLBACK_TYPE_SAVE_ALL_SETTINGS,
        3 => PH_MAINWINDOW_CALLBACK_TYPE_PREPARE_FOR_EARLY_SHUTDOWN,
        4 => PH_MAINWINDOW_CALLBACK_TYPE_CANCEL_EARLY_SHUTDOWN,
        5 => PH_MAINWINDOW_CALLBACK_TYPE_TOGGLE_VISIBLE,
        6 => PH_MAINWINDOW_CALLBACK_TYPE_SHOW_MEMORY_EDITOR,
        7 => PH_MAINWINDOW_CALLBACK_TYPE_SHOW_MEMORY_RESULTS,
        8 => PH_MAINWINDOW_CALLBACK_TYPE_SELECT_TAB_PAGE,
        9 => PH_MAINWINDOW_CALLBACK_TYPE_GET_CALLBACK_LAYOUT_PADDING,
        10 => PH_MAINWINDOW_CALLBACK_TYPE_INVALIDATE_LAYOUT_PADDING,
        11 => PH_MAINWINDOW_CALLBACK_TYPE_SELECT_PROCESS_NODE,
        12 => PH_MAINWINDOW_CALLBACK_TYPE_SELECT_SERVICE_ITEM,
        13 => PH_MAINWINDOW_CALLBACK_TYPE_SELECT_NETWORK_ITEM,
        14 => PH_MAINWINDOW_CALLBACK_TYPE_UPDATE_FONT,
        15 => PH_MAINWINDOW_CALLBACK_TYPE_GET_FONT,
        16 => PH_MAINWINDOW_CALLBACK_TYPE_INVOKE,
        17 => PH_MAINWINDOW_CALLBACK_TYPE_POST,
        18 => PH_MAINWINDOW_CALLBACK_TYPE_REFRESH,
        19 => PH_MAINWINDOW_CALLBACK_TYPE_CREATE_TAB_PAGE,
        20 => PH_MAINWINDOW_CALLBACK_TYPE_GET_UPDATE_AUTOMATICALLY,
        21 => PH_MAINWINDOW_CALLBACK_TYPE_SET_UPDATE_AUTOMATICALLY,
        22 => PH_MAINWINDOW_CALLBACK_TYPE_ICON_CLICK,
        23 => PH_MAINWINDOW_CALLBACK_TYPE_WINDOW_BASE,
        24 => PH_MAINWINDOW_CALLBACK_TYPE_GETWINDOW_PROCEDURE,
        25 => PH_MAINWINDOW_CALLBACK_TYPE_SETWINDOW_PROCEDURE,
        26 => PH_MAINWINDOW_CALLBACK_TYPE_WINDOW_HANDLE,
        27 => PH_MAINWINDOW_CALLBACK_TYPE_VERSION,
        28 => PH_MAINWINDOW_CALLBACK_TYPE_PORTABLE,
        29 => PH_MAINWINDOW_CALLBACK_TYPE_PAGEINDEX,
        30 => PH_MAINWINDOW_CALLBACK_TYPE_WINDOWDPI,
        31 => PH_MAINWINDOW_CALLBACK_TYPE_WINDOWNAME,
        32 => PH_MAINWINDOW_CALLBACK_TYPE_MAXIMUM,
        _ => throw ArgumentError(
            'Unknown value for PH_MAINWINDOW_CALLBACK_TYPE: $value'),
      };
}

final class PH_LAYOUT_PADDING_DATA extends ffi.Struct {
  external RECT Padding;
}

typedef PH_LAYOUT_PADDING_DATA$1 = PH_LAYOUT_PADDING_DATA;
typedef PPH_LAYOUT_PADDING_DATA = ffi.Pointer<PH_LAYOUT_PADDING_DATA>;

enum PH_MAIN_TAB_PAGE_MESSAGE {
  MainTabPageCreate(0),
  MainTabPageDestroy(1),

  /// HWND *Parameter1 (WindowHandle), HWND Parameter2 (ParentWindow)
  MainTabPageCreateWindow(2),

  /// BOOLEAN Parameter1 (Selected)
  MainTabPageSelected(3),

  /// PPH_MAIN_TAB_PAGE_MENU_INFORMATION Parameter1
  MainTabPageInitializeSectionMenuItems(4),
  MainTabPageLoadSettings(5),
  MainTabPageSaveSettings(6),

  /// PPH_MAIN_TAB_PAGE_EXPORT_CONTENT Parameter1
  MainTabPageExportContent(7),

  /// HFONT Parameter1 (Font)
  MainTabPageFontChanged(8),

  /// BOOLEAN Parameter1 (UpdateAutomatically)
  MainTabPageUpdateAutomaticallyChanged(9),
  MainTabPageDpiChanged(10),
  MaxMainTabPageMessage(11);

  final int value;
  const PH_MAIN_TAB_PAGE_MESSAGE(this.value);

  static PH_MAIN_TAB_PAGE_MESSAGE fromValue(int value) => switch (value) {
        0 => MainTabPageCreate,
        1 => MainTabPageDestroy,
        2 => MainTabPageCreateWindow,
        3 => MainTabPageSelected,
        4 => MainTabPageInitializeSectionMenuItems,
        5 => MainTabPageLoadSettings,
        6 => MainTabPageSaveSettings,
        7 => MainTabPageExportContent,
        8 => MainTabPageFontChanged,
        9 => MainTabPageUpdateAutomaticallyChanged,
        10 => MainTabPageDpiChanged,
        11 => MaxMainTabPageMessage,
        _ => throw ArgumentError(
            'Unknown value for PH_MAIN_TAB_PAGE_MESSAGE: $value'),
      };
}

typedef PPH_MAIN_TAB_PAGE = ffi.Pointer<PH_MAIN_TAB_PAGE>;
typedef PPH_MAIN_TAB_PAGE_CALLBACKFunction = BOOLEAN Function(
    PPH_MAIN_TAB_PAGE Page,
    ffi.UnsignedInt Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef DartPPH_MAIN_TAB_PAGE_CALLBACKFunction = Dartboolean Function(
    PPH_MAIN_TAB_PAGE Page,
    PH_MAIN_TAB_PAGE_MESSAGE Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef PPH_MAIN_TAB_PAGE_CALLBACK
    = ffi.Pointer<ffi.NativeFunction<PPH_MAIN_TAB_PAGE_CALLBACKFunction>>;

final class UnnamedUnion38 extends ffi.Union {
  @ULONG()
  external int StateFlags;
}

final class PH_MAIN_TAB_PAGE extends ffi.Struct {
  /// Public
  external PH_STRINGREF$1 Name;

  @ULONG()
  external int Flags;

  external PPH_MAIN_TAB_PAGE_CALLBACK Callback;

  external PVOID Context;

  @LONG()
  external int Index;

  external UnnamedUnion38 unnamed;

  @ffi.Array.multi([2])
  external ffi.Array<PVOID> Reserved;
}

final class PH_MAIN_TAB_PAGE_EXPORT_CONTENT extends ffi.Struct {
  external PPH_FILE_STREAM FileStream;

  @ULONG()
  external int Mode;
}

typedef PH_MAIN_TAB_PAGE_EXPORT_CONTENT$1 = PH_MAIN_TAB_PAGE_EXPORT_CONTENT;
typedef PPH_MAIN_TAB_PAGE_EXPORT_CONTENT
    = ffi.Pointer<PH_MAIN_TAB_PAGE_EXPORT_CONTENT>;

final class PH_MAIN_TAB_PAGE_MENU_INFORMATION extends ffi.Struct {
  external PPH_EMENU_ITEM Menu;

  @ULONG()
  external int StartIndex;
}

typedef PH_MAIN_TAB_PAGE_MENU_INFORMATION$1 = PH_MAIN_TAB_PAGE_MENU_INFORMATION;
typedef PPH_MAIN_TAB_PAGE_MENU_INFORMATION
    = ffi.Pointer<PH_MAIN_TAB_PAGE_MENU_INFORMATION>;
typedef PH_MAIN_TAB_PAGE$1 = PH_MAIN_TAB_PAGE;

final class PH_PLUGIN extends ffi.Struct {
  /// Public
  external PH_AVL_LINKS$1 Links;

  external PVOID DllBase;
}

typedef PPH_PLUGIN = ffi.Pointer<PH_PLUGIN>;
typedef PPH_NF_BEGIN_BITMAPFunction = ffi.Void Function(
    PULONG Width,
    PULONG Height,
    ffi.Pointer<HBITMAP> Bitmap,
    ffi.Pointer<PVOID> Bits,
    ffi.Pointer<HDC> Hdc,
    ffi.Pointer<HBITMAP> OldBitmap);
typedef DartPPH_NF_BEGIN_BITMAPFunction = void Function(
    PULONG Width,
    PULONG Height,
    ffi.Pointer<HBITMAP> Bitmap,
    ffi.Pointer<PVOID> Bits,
    ffi.Pointer<HDC> Hdc,
    ffi.Pointer<HBITMAP> OldBitmap);
typedef PPH_NF_BEGIN_BITMAP
    = ffi.Pointer<ffi.NativeFunction<PPH_NF_BEGIN_BITMAPFunction>>;

final class PH_NF_POINTERS extends ffi.Struct {
  external PPH_NF_BEGIN_BITMAP BeginBitmap;
}

typedef PPH_NF_POINTERS = ffi.Pointer<PH_NF_POINTERS>;

final class PH_NF_ICON extends ffi.Struct {
  /// Public
  external PPH_PLUGIN Plugin;

  @ULONG()
  external int SubId;

  external PVOID Context;

  external PPH_NF_POINTERS Pointers;
}

/// notifico
typedef PH_NF_ICON$1 = PH_NF_ICON;
typedef PPH_NF_ICON = ffi.Pointer<PH_NF_ICON>;
typedef PPH_NF_UPDATE_REGISTERED_ICONFunction = ffi.Void Function(
    PPH_NF_ICON Icon);
typedef DartPPH_NF_UPDATE_REGISTERED_ICONFunction = void Function(
    PPH_NF_ICON Icon);
typedef PPH_NF_UPDATE_REGISTERED_ICON
    = ffi.Pointer<ffi.NativeFunction<PPH_NF_UPDATE_REGISTERED_ICONFunction>>;
typedef PH_NF_POINTERS$1 = PH_NF_POINTERS;
typedef PPH_NF_ICON_UPDATE_CALLBACKFunction = ffi.Void Function(
    PPH_NF_ICON Icon,
    ffi.Pointer<PVOID> NewIconOrBitmap,
    PULONG Flags,
    ffi.Pointer<PPH_STRING> NewText,
    PVOID Context);
typedef DartPPH_NF_ICON_UPDATE_CALLBACKFunction = void Function(
    PPH_NF_ICON Icon,
    ffi.Pointer<PVOID> NewIconOrBitmap,
    PULONG Flags,
    ffi.Pointer<PPH_STRING> NewText,
    PVOID Context);
typedef PPH_NF_ICON_UPDATE_CALLBACK
    = ffi.Pointer<ffi.NativeFunction<PPH_NF_ICON_UPDATE_CALLBACKFunction>>;
typedef PPH_NF_ICON_MESSAGE_CALLBACKFunction = BOOLEAN Function(
    PPH_NF_ICON Icon, ULONG_PTR WParam, ULONG_PTR LParam, PVOID Context);
typedef DartPPH_NF_ICON_MESSAGE_CALLBACKFunction = Dartboolean Function(
    PPH_NF_ICON Icon,
    DartULONG_PTR WParam,
    DartULONG_PTR LParam,
    PVOID Context);
typedef PPH_NF_ICON_MESSAGE_CALLBACK
    = ffi.Pointer<ffi.NativeFunction<PPH_NF_ICON_MESSAGE_CALLBACKFunction>>;

final class PH_NF_MSG_SHOWMINIINFOSECTION_DATA extends ffi.Struct {
  /// NULL to leave unchanged
  external PWSTR SectionName;
}

typedef PH_NF_MSG_SHOWMINIINFOSECTION_DATA$1
    = PH_NF_MSG_SHOWMINIINFOSECTION_DATA;
typedef PPH_NF_MSG_SHOWMINIINFOSECTION_DATA
    = ffi.Pointer<PH_NF_MSG_SHOWMINIINFOSECTION_DATA>;
typedef PH_PLUGIN$1 = PH_PLUGIN;

/// Public registration data
final class PH_NF_ICON_REGISTRATION_DATA extends ffi.Struct {
  external PPH_NF_ICON_UPDATE_CALLBACK UpdateCallback;

  external PPH_NF_ICON_MESSAGE_CALLBACK MessageCallback;
}

/// Public registration data
typedef PH_NF_ICON_REGISTRATION_DATA$1 = PH_NF_ICON_REGISTRATION_DATA;
typedef PPH_NF_ICON_REGISTRATION_DATA
    = ffi.Pointer<PH_NF_ICON_REGISTRATION_DATA>;

/// sysinfo
enum PH_SYSINFO_VIEW_TYPE {
  SysInfoSummaryView(0),
  SysInfoSectionView(1);

  final int value;
  const PH_SYSINFO_VIEW_TYPE(this.value);

  static PH_SYSINFO_VIEW_TYPE fromValue(int value) => switch (value) {
        0 => SysInfoSummaryView,
        1 => SysInfoSectionView,
        _ =>
          throw ArgumentError('Unknown value for PH_SYSINFO_VIEW_TYPE: $value'),
      };
}

typedef PPH_SYSINFO_COLOR_SETUP_FUNCTIONFunction = ffi.Void Function(
    PPH_GRAPH_DRAW_INFO DrawInfo,
    COLORREF Color1,
    COLORREF Color2,
    LONG WindowDpi);
typedef DartPPH_SYSINFO_COLOR_SETUP_FUNCTIONFunction = void Function(
    PPH_GRAPH_DRAW_INFO DrawInfo,
    DartDWORD Color1,
    DartDWORD Color2,
    DartLONG WindowDpi);
typedef PPH_SYSINFO_COLOR_SETUP_FUNCTION
    = ffi.Pointer<ffi.NativeFunction<PPH_SYSINFO_COLOR_SETUP_FUNCTIONFunction>>;

final class PH_SYSINFO_PARAMETERS extends ffi.Struct {
  external HWND SysInfoWindowHandle;

  external HWND ContainerWindowHandle;

  external HFONT Font;

  external HFONT MediumFont;

  external HFONT LargeFont;

  @ULONG()
  external int FontHeight;

  @ULONG()
  external int FontAverageWidth;

  @ULONG()
  external int MediumFontHeight;

  @ULONG()
  external int MediumFontAverageWidth;

  @COLORREF()
  external int GraphBackColor;

  @COLORREF()
  external int PanelForeColor;

  external PPH_SYSINFO_COLOR_SETUP_FUNCTION ColorSetupFunction;

  @ULONG()
  external int MinimumGraphHeight;

  @ULONG()
  external int SectionViewGraphHeight;

  @LONG()
  external int PanelWidth;

  @LONG()
  external int WindowDpi;
}
